--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,7 @@
 
 body {
   height: 100%;
-  font-family: "Poppins", sans-serif; }
+  font-family: "Poppins", sans-serif;
+  font-weight: 400; }
 
 /*# sourceMappingURL=main.css.map */
