--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,7 +1,6 @@
 /* reset style */
 * {
   box-sizing: border-box;
-  background-color: #f5f5f5;
   margin: 0;
   padding: 0;
 }
@@ -12,5 +11,42 @@ body {
   height: 100%;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
+  background-color: #f5f5f5;
 }
 
+.introduction {
+  display: flex;
+  flex-direction: column;
+
+  border-radius: 0px 0px 32px 32px;
+  background: linear-gradient(180deg, #2e64d9 0%, #121e3f 100%);
+  box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
+
+  &__frame {
+    &--nav {
+      ul {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+
+        li {
+          padding: 6px 8px;
+          list-style: none;
+        }
+
+        li h2 {
+          color: #f5f5f5;
+          font-size: 24px;
+          font-weight: 700;
+        }
+      }
+
+      &.logo {
+        width: 88px;
+        height: 88px;
+        position: relative;
+        top: 5px;
+      }
+    }
+  }
+}
