--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0; }
 
+/* variables */
 body {
   height: 100%;
   font-family: "Poppins", sans-serif;
@@ -16,7 +17,8 @@ body {
   flex-direction: column;
   border-radius: 0px 0px 32px 32px;
   background: linear-gradient(180deg, #3272fb 0%, #121e3f 100%);
-  box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.25); }
+  box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
+  padding-bottom: 2em; }
   .introduction__frame--nav.title {
     flex-basis: 16em;
     text-align: center; }
@@ -36,5 +38,32 @@ body {
     height: 88px;
     position: relative;
     top: 5px; }
+  .introduction__frame hr {
+    margin: 0 5%;
+    text-align: center;
+    color: #f5f5f5;
+    opacity: 0.15; }
+  .introduction__catalogue {
+    display: flex;
+    justify-content: center;
+    gap: 1em;
+    flex-direction: column;
+    align-items: center;
+    flex-basis: 400px; }
+    .introduction__catalogue--container {
+      display: flex;
+      width: 100%;
+      justify-content: center; }
+      .introduction__catalogue--container--title {
+        color: #f5f5f5;
+        font-size: 1.5em;
+        font-weight: bold;
+        text-align: left; }
+    .introduction__catalogue iframe {
+      background-color: #f5f5f5;
+      min-width: 80%;
+      height: 300px;
+      border-radius: 32px;
+      margin-bottom: 1em; }
 
 /*# sourceMappingURL=main.css.map */
