--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,13 +5,18 @@
   padding: 0;
 }
 
+/* variables */
+$primary-color: #3272fb;
+$secondary-color: #f5f5f5;
+$tertiary-color: #121e3f;
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
 body {
   height: 100%;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
-  background-color: #f5f5f5;
+  background-color: $secondary-color;
 }
 
 .introduction {
@@ -19,8 +24,10 @@ body {
   flex-direction: column;
 
   border-radius: 0px 0px 32px 32px;
-  background: linear-gradient(180deg, #3272fb 0%, #121e3f 100%);
+  background: linear-gradient(180deg, $primary-color 0%, $tertiary-color 100%);
   box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
+
+  padding-bottom: 2em;
 
   &__frame {
     &--nav {
@@ -52,6 +59,43 @@ body {
         position: relative;
         top: 5px;
       }
+    }
+
+    hr {
+      margin: 0 5%;
+      text-align: center;
+      color: $secondary-color;
+      opacity: 0.15;
+    }
+  }
+
+  &__catalogue {
+    display: flex;
+    justify-content: center;
+    gap: 1em;
+    flex-direction: column;
+    align-items: center;
+    flex-basis: 400px;
+
+    &--container {
+      display: flex;
+      width: 100%;
+      justify-content: center;
+
+      &--title {
+        color: $secondary-color;
+        font-size: 1.5em;
+        font-weight: bold;
+        text-align: left;
+      }
+    }
+
+    iframe {
+      background-color: #f5f5f5;
+      min-width: 80%;
+      height: 300px;
+      border-radius: 32px;
+      margin-bottom: 1em;
     }
   }
 }
