--- a/styles/main.css
+++ b/styles/main.css
@@ -15,10 +15,11 @@ body {
 .introduction {
   display: flex;
   flex-direction: column;
-  border-radius: 0px 0px 32px 32px;
+  border-radius: 0px 0px 2em 2em;
   background: linear-gradient(180deg, #3272fb 0%, #121e3f 100%);
   box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
-  padding-bottom: 2em; }
+  padding-bottom: 2em;
+  gap: 1em; }
   .introduction__frame--nav.title {
     flex-basis: 16em;
     text-align: center; }
@@ -62,8 +63,53 @@ body {
     .introduction__catalogue iframe {
       background-color: #f5f5f5;
       min-width: 80%;
-      height: 300px;
-      border-radius: 32px;
+      height: 400px;
+      border-radius: 2em;
       margin-bottom: 1em; }
+
+.location {
+  width: 100%;
+  margin-top: 2.5em;
+  display: flex;
+  flex-direction: column; }
+  .location__title {
+    align-self: center;
+    padding: 1em; }
+    .location__title h2 {
+      text-transform: capitalize; }
+  .location__map {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%; }
+    .location__map iframe {
+      width: 90%;
+      height: 400px;
+      border-radius: 2em;
+      border: none;
+      box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.25); }
+
+.brand-messages {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 5em 0 2.5em 0; }
+  .brand-messages__box {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 90%;
+    gap: 1em;
+    background: linear-gradient(180deg, #3272fb 0%, #121e3f 100%);
+    border-radius: 2em; }
+    .brand-messages__box ul {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      margin: 0px 0 0 2em;
+      padding: 2em;
+      color: white; }
 
 /*# sourceMappingURL=main.css.map */
