--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 /* reset style */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 * {
@@ -94,7 +95,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin: 5em 0 2.5em 0; }
+  margin: 5em 0 5em 0; }
   .brand-messages__box {
     display: flex;
     justify-content: center;
@@ -111,5 +112,27 @@ body {
       margin: 0px 0 0 2em;
       padding: 2em;
       color: white; }
+
+footer {
+  background-color: #121e3f;
+  border-top: 0.25em solid #3272fb;
+  box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
+  width: 100%;
+  height: 10em; }
+  footer .footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    color: #3272fb;
+    gap: 1em;
+    box-shadow: inset 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; }
+    footer .footer__copyright .bi-c-circle-fill {
+      color: #3272fb; }
+    footer .footer__made-text {
+      font-weight: bold; }
 
 /*# sourceMappingURL=main.css.map */
