--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+
 /* reset style */
 * {
   box-sizing: border-box;
@@ -11,6 +13,8 @@ $secondary-color: #f5f5f5;
 $tertiary-color: #121e3f;
 
 $soft-borders: 2em;
+
+$footer-background: #121e3f;
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
@@ -146,7 +150,7 @@ body {
   align-items: center;
   width: 100%;
 
-  margin: 5em 0 2.5em 0;
+  margin: 5em 0 5em 0;
 
   &__box {
     display: flex;
@@ -170,6 +174,44 @@ body {
       margin: 0px 0 0 2em;
       padding: 2em;
       color: white;
+    }
+  }
+}
+
+//* footer section */
+
+footer {
+  background-color: $footer-background;
+  border-top: 0.25em solid $primary-color;
+  box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
+
+  width: 100%;
+  height: 10em;
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    color: $primary-color;
+    gap: 1em;
+
+    box-shadow: inset 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
+
+    &__copyright {
+      & .bi-c-circle-fill {
+        color: $primary-color;
+      }
+    }
+
+    &__made-text {
+      font-weight: bold;
     }
   }
 }
