--- a/styles/main.css
+++ b/styles/main.css
@@ -116,12 +116,17 @@ body {
   .brand-messages__box {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     flex-direction: column;
     width: 90%;
-    gap: 1em;
     background: linear-gradient(180deg, #3272fb 0%, #121e3f 100%);
     border-radius: 2em; }
+    .brand-messages__box--title {
+      color: #f5f5f5;
+      font-size: 1.5em;
+      font-weight: bold;
+      text-align: center;
+      padding: 1em; }
     .brand-messages__box ul {
       display: flex;
       flex-direction: column;
@@ -129,6 +134,37 @@ body {
       margin: 0px 0 0 2em;
       padding: 2em;
       color: white; }
+    .brand-messages__box #frame {
+      display: flex;
+      width: 100%;
+      flex-flow: row nowrap;
+      justify-content: center;
+      align-items: center;
+      gap: 0.5em; }
+    .brand-messages__box--action {
+      padding: 1em;
+      background-color: #121e3f;
+      border-radius: 2em;
+      margin-bottom: 2em;
+      transition: all 0.2s ease-in-out; }
+      .brand-messages__box--action:hover {
+        transform: scale(1.05);
+        box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
+        background-color: #3272fb;
+        cursor: pointer; }
+      .brand-messages__box--action p > a {
+        text-decoration: none;
+        color: #f5f5f5;
+        font-weight: bold;
+        display: flex;
+        gap: 0.5em; }
+    .brand-messages__box--icon {
+      margin-bottom: 2em; }
+      .brand-messages__box--icon > i {
+        font-size: 2em;
+        color: #25d366;
+        display: none;
+        transition: all 0.2s ease-in-out; }
 
 footer {
   background-color: #121e3f;
