--- a/styles/main.scss
+++ b/styles/main.scss
@@ -184,17 +184,24 @@ body {
   &__box {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
 
     flex-direction: column;
     width: 90%;
-    gap: 1em;
     background: linear-gradient(
       180deg,
       $primary-color 0%,
       $tertiary-color 100%
     );
     border-radius: $soft-borders;
+
+    &--title {
+      color: $secondary-color;
+      font-size: 1.5em;
+      font-weight: bold;
+      text-align: center;
+      padding: 1em;
+    }
 
     ul {
       display: flex;
@@ -203,6 +210,52 @@ body {
       margin: 0px 0 0 2em;
       padding: 2em;
       color: white;
+    }
+
+    #frame {
+      display: flex;
+      width: 100%;
+      flex-flow: row nowrap;
+
+      justify-content: center;
+      align-items: center;
+      gap: 0.5em;
+    }
+
+    &--action {
+      padding: 1em;
+      background-color: $tertiary-color;
+      border-radius: $soft-borders;
+      margin-bottom: 2em;
+
+      transition: all 0.2s ease-in-out;
+
+      &:hover {
+        transform: scale(1.05);
+        box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
+        background-color: $primary-color;
+        cursor: pointer;
+      }
+
+      p > a {
+        text-decoration: none;
+        color: $secondary-color;
+        font-weight: bold;
+
+        display: flex;
+        gap: 0.5em;
+      }
+    }
+
+    &--icon {
+      margin-bottom: 2em;
+
+      & > i {
+        font-size: 2em;
+        color: #25d366;
+        display: none;
+        transition: all 0.2s ease-in-out;
+      }
     }
   }
 }
