--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,13 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
-/* reset style */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Poppins:wght@400;700&display=swap");
+/* variables */
+/* reset style */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0; }
 
-/* variables */
 body {
   height: 100%;
   font-family: "Poppins", sans-serif;
