--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,4 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+@import "colors";
 
 /* reset style */
 * {
@@ -6,17 +6,6 @@
   margin: 0;
   padding: 0;
 }
-
-/* variables */
-$primary-color: #3272fb;
-$secondary-color: #f5f5f5;
-$tertiary-color: #121e3f;
-
-$soft-borders: 2em;
-
-$footer-background: #121e3f;
-
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
 body {
   height: 100%;
