--- a/styles/main.css
+++ b/styles/main.css
@@ -135,6 +135,15 @@ body {
       margin: 0px 0 0 2em;
       padding: 2em;
       color: white; }
+      .brand-messages__box ul li > p span.sistema-apartado {
+        color: #f4fc2d;
+        text-transform: capitalize; }
+      .brand-messages__box ul li > p span.usd {
+        color: #6df1a6; }
+      .brand-messages__box ul li > p span.zelle {
+        color: #923fff; }
+      .brand-messages__box ul li > p span.binance {
+        color: #f0b90b; }
     .brand-messages__box #frame {
       display: flex;
       width: 100%;
@@ -167,26 +176,54 @@ body {
         display: none;
         transition: all 0.2s ease-in-out; }
 
-footer {
+footer.footer {
   background-color: #121e3f;
   border-top: 0.25em solid #3272fb;
   box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 10em; }
-  footer .footer {
+  height: 10em;
+  color: #3272fb;
+  gap: 1em;
+  box-shadow: inset 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; }
+  footer.footer p {
+    text-align: center; }
+  footer.footer p.footer__copyright {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    color: #3272fb;
-    gap: 1em;
-    box-shadow: inset 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; }
-    footer .footer__copyright .bi-c-circle-fill {
-      color: #3272fb; }
-    footer .footer__made-text {
-      font-weight: bold; }
+    gap: 0.3em;
+    height: 2em; }
+    footer.footer p.footer__copyright .bi-c-circle-fill {
+      color: #3272fb;
+      position: relative;
+      top: 1px;
+      font-size: 1.5em; }
+  footer.footer__made-text {
+    font-weight: bold; }
+
+@media screen and (max-width: 576px) {
+  div.introduction__catalogue iframe {
+    width: 85%;
+    overflow: hidden; }
+
+  ul > li.introduction__frame--nav.title h2 {
+    font-size: 1.3em; }
+
+  i.bi {
+    font-size: 1.7em !important; }
+
+  section.location div.location__title h2 {
+    text-align: center; }
+
+  h2.brand-messages__box--title {
+    font-size: 1.3em;
+    padding-top: 2em; }
+
+  section.brand-messages div.brand-messages__box ul {
+    gap: 1.8em; } }
 
 /*# sourceMappingURL=main.css.map */
