--- a/styles/main.scss
+++ b/styles/main.scss
@@ -199,6 +199,22 @@ body {
       margin: 0px 0 0 2em;
       padding: 2em;
       color: white;
+
+      & li > p span {
+        &.sistema-apartado {
+          color: #f4fc2d;
+          text-transform: capitalize;
+        }
+        &.usd {
+          color: #6df1a6;
+        }
+        &.zelle {
+          color: #923fff;
+        }
+        &.binance {
+          color: #f0b90b;
+        }
+      }
     }
 
     #frame {
@@ -251,38 +267,80 @@ body {
 
 //* footer section */
 
-footer {
+footer.footer {
   background-color: $footer-background;
   border-top: 0.25em solid $primary-color;
   box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
 
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 10em;
+  color: $primary-color;
+  gap: 1em;
 
-  .footer {
+  box-shadow: inset 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
+
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+  & p {
+    text-align: center;
+  }
+
+  & p.footer__copyright {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    color: $primary-color;
-    gap: 1em;
+    gap: 0.3em;
+    height: 2em;
 
-    box-shadow: inset 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
-
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-      sans-serif;
-
-    &__copyright {
-      & .bi-c-circle-fill {
-        color: $primary-color;
-      }
+    & .bi-c-circle-fill {
+      color: $primary-color;
+      position: relative;
+      top: 1px;
+      font-size: 1.5em;
     }
+  }
 
-    &__made-text {
-      font-weight: bold;
+  &__made-text {
+    font-weight: bold;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  div.introduction__catalogue iframe {
+    width: 85%;
+    overflow: hidden;
+  }
+
+  ul > li.introduction__frame--nav.title {
+    & h2 {
+      font-size: 1.3em;
+    }
+  }
+
+  i.bi {
+    font-size: 1.7em !important;
+  }
+
+  section.location div.location__title {
+    & h2 {
+      text-align: center;
+    }
+  }
+
+  h2.brand-messages__box--title {
+    font-size: 1.3em;
+    padding-top: 2em;
+  }
+
+  section.brand-messages {
+    & div.brand-messages__box {
+      ul {
+        gap: 1.8em;
+      }
     }
   }
 }
