--- a/styles/catalogue.css
+++ b/styles/catalogue.css
@@ -86,7 +86,13 @@ section.catalogue {
       transition: all 0.2s ease;
       font-weight: bold;
       text-decoration: none; }
+      section.catalogue div.catalogue__container.product-desc > a.catalogue__container--buy-button:link {
+        color: #f5f5f5; }
       section.catalogue div.catalogue__container.product-desc > a.catalogue__container--buy-button:hover {
+        cursor: pointer;
+        color: white;
+        background-color: #182856; }
+      section.catalogue div.catalogue__container.product-desc > a.catalogue__container--buy-button:active {
         cursor: pointer;
         color: white;
         background-color: #182856; }
