Add 3 new items and change title weightness

--- a/styles/catalogue.scss
+++ b/styles/catalogue.scss
@@ -148,7 +148,7 @@ section.catalogue {
 
       font: {
         family: josefin slab;
-        weight: bold;
+        weight: 800;
         size: 2em;
       }
     }
