--- a/styles/catalogue.css
+++ b/styles/catalogue.css
@@ -64,7 +64,7 @@ section.catalogue {
       padding: 0.5em 0.5em 0.5em 0;
       margin-left: auto;
       font-family: josefin slab;
-      font-weight: bold;
+      font-weight: 800;
       font-size: 2em; }
     section.catalogue div.catalogue__container.product-desc p {
       display: inline-block;
